# hook-lang

./: CMakeLists.txt
.github/workflows/: build.yml  release.yml
benchmark/: fib.hk  fib.py
core/: CMakeLists.txt  hk_socket.c  hk_threading.c  hk_threading.h
docs/: built-in.md  core-modules.txt  grammar.md  grammar.txt  keywords.txt  opcodes.txt  tokens.txt
examples/: 100doors.hk  bubble_sort.hk  coin_flip.hk  fractal.hk  generators.hk  tic_tac_toe.hk
extensions/: CMakeLists.txt  mongodb.c  mongodb.h  olive.c  olive.h  rocksdb.c  rocksdb.h
include/: hk_array.h  hk_ast.h  hk_chunk.h  hk_generator.h  hk_parser.h  hk_range.h  hk_state.h  hk_status.h  hk_userdata.h
include/hook/: chunk.h
src/: compiler.c  dump.c  hk_array.c  hk_ast.c  hk_compiler.c  hk_dump.c  hk_generator.c  hk_iterable.c  hk_module.c  hk_parser.c  hk_range.c  hk_scanner.c  hk_scanner.h  hk_state.c  hk_userdata.c  main.c  scanner.c  scanner.h  state.c
tests/: builtin_function_is_callable_test.hk  builtin_function_is_comparable_test.hk  builtin_function_type_test.hk  function_declaration_test.hk  generator_test.hk  module_threading_mutex_test.hk  nonlocals_test.hk  switch_statement_test.hk
